Refactor payload state handling and update related logic
Introduces `PayloadState` to encapsulate the state of requests, replacing previous direct management of appointments. Adjusts related modules, including Italian and Russian embassy services, to align with the new structure. Fixes inconsistencies in dependency injection and parameter handling for better clarity and maintainability.

--- a/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
+++ b/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <Compile Include="services\prenotami\Domain.fs" />
+      <Compile Include="services\prenotami\DataAccess.fs" />
       <Compile Include="services\prenotami\Client.fs" />
       <Compile Include="services\prenotami\Web.Http.fs" />
       <Compile Include="services\prenotami\Web.Html.Common.fs" />
