--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -58,9 +58,11 @@
         <Compile Include="services\services\russian\kdmid\Notification.fs" />
         <Compile Include="services\services\russian\midpass\Query.fs" />
         <Compile Include="services\services\russian\midpass\Command.fs" />
+        <Compile Include="services\services\russian\midpass\Notification.fs" />
         <Compile Include="services\services\russian\Query.fs" />
         <Compile Include="services\services\italian\prenotami\Query.fs" />
         <Compile Include="services\services\italian\prenotami\Command.fs" />
+        <Compile Include="services\services\italian\prenotami\Notification.fs" />
         <Compile Include="services\services\italian\Query.fs" />
         <Compile Include="services\services\Query.fs" />
         <Compile Include="services\embassies\Query.fs" />
