--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -29,6 +29,9 @@
         <Content Include="data\Chats.json" />
         <Content Include="data\Requests.json" />
         <Content Include="data\Culture.json" />
+        <Content Include="data\Requests.Rus.Kdmid.json" />
+        <Content Include="data\Requests.Rus.Midpass.json" />
+        <Content Include="data\Requests.Ita.Prenotami.json" />
         <Content Include="settings\appsettings.yaml">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
           <Link>appsettings.yaml</Link>
