Remove deprecated 'Instruction' field and standardize service dependencies logic
The 'Instruction' field from service entities and related logic was removed to streamline the data model. Additionally, dependencies across Russian and Italian services were standardized, improving maintainability and reducing redundancy. Minor naming consistency adjustments and corrections to file paths and default messages were also included.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -68,9 +68,7 @@
         <Compile Include="services\embassies\Query.fs" />
         <Compile Include="controllers\Culture.fs" />
         <Compile Include="controllers\Embassies.fs" />
-        <Folder Include="controllers\services\russian\" />
-        <Folder Include="controllers\services\italian\" />
-        <Compile Include="controllers\services\Services.fs" />
+        <Compile Include="controllers\Services.fs" />
         <Compile Include="controllers\Subscriptions.fs" />
         <Compile Include="controllers\Controller.fs" />
         <Compile Include="Client.fs" />
