--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -22,16 +22,17 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Content Include="data\chats.json" />
+        <Content Include="data\culture.json" />
+        <Content Include="data\requests-rus-kdmid.json" />
+        <Content Include="data\requests-rus-midpass.json" />
+        <Content Include="data\requests-ita-prenotami.json" />
         <Content Include="Dockerfile" />
         <Content Include="..\..\.dockerignore">
             <Link>.dockerignore</Link>
         </Content>
         <Content Include="data\Chats.json" />
-        <Content Include="data\Requests.json" />
         <Content Include="data\Culture.json" />
-        <Content Include="data\Requests.Rus.Kdmid.json" />
-        <Content Include="data\Requests.Rus.Midpass.json" />
-        <Content Include="data\Requests.Ita.Prenotami.json" />
         <Content Include="settings\appsettings.yaml">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
           <Link>appsettings.yaml</Link>
