--- a/src/embassy-access-worker/settings/worker.yaml
+++ b/src/embassy-access-worker/settings/worker.yaml
@@ -196,7 +196,7 @@ Worker:
           Parallel: true
           Tasks:
             - Id: SA
-              Enabled: true
+              Enabled: false
               Recursively: 00:05:00
               Duration: 00:03:00
               Description: Search appointments for Italian embassy in Serbia
