--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -19,11 +19,14 @@
         <Compile Include="router\culture\Method.fs" />
         <Compile Include="router\embassies\Get.fs" />
         <Compile Include="router\embassies\Method.fs" />
+        <Compile Include="router\services\russian\kdmid\Get.fs" />
         <Compile Include="router\services\russian\kdmid\Post.fs" />
         <Compile Include="router\services\russian\kdmid\Method.fs" />
+        <Compile Include="router\services\russian\midpass\Get.fs" />
         <Compile Include="router\services\russian\midpass\Post.fs" />
         <Compile Include="router\services\russian\midpass\Method.fs" />
         <Compile Include="router\services\russian\Method.fs" />
+        <Compile Include="router\services\italian\prenotami\Get.fs" />
         <Compile Include="router\services\italian\prenotami\Post.fs" />
         <Compile Include="router\services\italian\prenotami\Method.fs" />
         <Compile Include="router\services\italian\Method.fs" />
