--- a/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
+++ b/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
@@ -9,6 +9,7 @@
       <Compile Include="services\prenotami\Domain.fs" />
       <Compile Include="services\prenotami\DataAccess.fs" />
       <Compile Include="services\prenotami\Client.fs" />
+      <Compile Include="services\prenotami\Html.fs" />
       <Compile Include="services\prenotami\Service.fs" />
     </ItemGroup>
 
