--- a/.gitmodules
+++ b/.gitmodules
@@ -1,20 +1,20 @@
 [submodule "submodules/fsharp-worker"]
 	path = submodules/fsharp-worker
 	url = https://github.com/masterlifting/fsharp-worker.git
-	branch = feature/italian
+	branch = dev
 [submodule "submodules/fsharp-web"]
 	path = submodules/fsharp-web
 	url = https://github.com/masterlifting/fsharp-web.git
-	branch = feature/italian
+	branch = dev
 [submodule "submodules/fsharp-persistence"]
 	path = submodules/fsharp-persistence
 	url = https://github.com/masterlifting/fsharp-persistence.git
-	branch = feature/italian
+	branch = dev
 [submodule "submodules/fsharp-infrastructure"]
 	path = submodules/fsharp-infrastructure
 	url = https://github.com/masterlifting/fsharp-infrastructure.git
-	branch = feature/italian
+	branch = dev
 [submodule "submodules/fsharp-ai-provider"]
 	path = submodules/fsharp-ai-provider
 	url = https://github.com/masterlifting/fsharp-ai-provider.git
-	branch = feature/italian
+	branch = dev
