Refactor routing and improve request handling.
Introduced dedicated Router modules for Italian and Russian services to standardize and simplify route parsing. Replaced manual service ID operations with structured route parsing across multiple modules. Updated request-handling logic to streamline query and operation lookups, reducing redundant code.

--- a/src/embassy-access-modules/embassy-access-russian/embassy-access-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-russian/embassy-access-russian.fsproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="services\Router.fs" />
         <Compile Include="services\kdmid\Domain.fs" />
         <Compile Include="services\kdmid\DataAccess.fs" />
         <Compile Include="services\kdmid\Client.fs" />
