--- a/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
+++ b/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Include="services\Router.fs" />
       <Compile Include="services\prenotami\Domain.fs" />
       <Compile Include="services\prenotami\DataAccess.fs" />
       <Compile Include="services\prenotami\Client.fs" />
