Remove AutoProcessing and improve browser page handling
The `AutoProcessing` field was removed from multiple components as it became obsolete. Enhancements also include adding the ability to close browser pages programmatically and improving error logging and request filtering logic for embassy services.

--- a/src/embassy-access-worker/settings/worker.yaml
+++ b/src/embassy-access-worker/settings/worker.yaml
@@ -197,8 +197,8 @@ Worker:
           Parallel: true
           Tasks:
             - Id: SA
-              Enabled: false
-              Recursively: 00:01:00
+              Enabled: true
+              Recursively: 00:02:00
               Duration: 00:03:00
               Description: Search appointments for Italian embassy in Serbia
               Schedule:
