Refactor and improve domain print methods formatting
Simplified and standardized the output format for various domain `print` methods, improving readability and consistency. Adjusted logic in `Limit` domain to handle state updates and validations more effectively. Disabled SA task in worker settings for the Italian embassy in Serbia.

--- a/src/embassy-access-worker/settings/worker.yaml
+++ b/src/embassy-access-worker/settings/worker.yaml
@@ -197,7 +197,7 @@ Worker:
           Parallel: true
           Tasks:
             - Id: SA
-              Enabled: true
+              Enabled: false
               Recursively: 00:02:00
               Duration: 00:03:00
               Description: Search appointments for Italian embassy in Serbia
