Rename operation types to clarify and unify terminology
Updated operation type names and related logic across modules to align with a more unified naming convention (e.g., "CheckSlotsNow" to "ManualRequest"). Refactored button creation to improve code consistency and reuse through `ButtonsGroup.createButtons`. Adjusted dependencies and settings to reflect these changes.

--- a/src/embassy-access-worker/settings/services.yaml
+++ b/src/embassy-access-worker/settings/services.yaml
@@ -1,6 +1,6 @@
 RussianKdmidServices: &RussianKdmidServices
   - Id: "0"
-    Name: Check slots now
+    Name: Manual check slots
   - Id: "1"
     Name: Slots auto notification
   - Id: "2"
@@ -47,7 +47,7 @@ RussianServices: &RussianServices
 
 ItalianPrenotamiServices: &ItalianPrenotamiServices
   - Id: "0"
-    Name: Check slots now
+    Name: Manual check slots
   - Id: "1"
     Name: Slots auto notification
 
