Refactor: add Culture module and integrate into project structure

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="dependencies\Web.fs" />
         <Compile Include="dependencies\Persistence.fs" />
         <Compile Include="dependencies\AIProvider.fs" />
+        <Compile Include="dependencies\Culture.fs" />
         <Compile Include="dependencies\Telegram.fs" />
         <Compile Include="dependencies\embassies\Common.fs" />
         <Compile Include="dependencies\embassies\Russian.fs" />
